--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     
 </head>
 
-<body class="bg-[url('assets/worldmap.jpg')] bg-no-repeat sm:bg-black xl:bg-none">
+<body class="bg-[url('Assets/worldmap.jpg')] bg-no-repeat sm:bg-black xl:bg-none">
     <div class=" h-screen flex items-center justify-center">
         <div class="z-0  fixed  ">
             <video autoplay loop muted class="  w-screen hidden xl:block ">
